<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:context=".SignIn"
        android:background="#f1f1f1">

    <TextView
            android:text="@string/SignInTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView2"
            android:layout_alignParentTop="true" android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:textColor="#32a65b" android:textSize="30sp"/>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="319dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
            android:layout_marginBottom="212dp">

        <TextView
                android:text="@string/SignInPhoneLabelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#32a65b"

                android:id="@+id/textView8"
                android:paddingBottom="10dp"/>

        <EditText
                android:id="@+id/edtPhone"
                android:background="#90cfcaca"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:inputType="phone"/>

        <TextView
                android:text="@string/SignInPwdLabelTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#32a65b"
                android:id="@+id/textView10" android:paddingTop="10dp"/>
        <EditText
                android:id="@+id/edtPwd"
                android:background="#90cfcaca"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:layout_marginTop="15dp" android:visibility="visible"/>
    </LinearLayout>
    <Button
            android:id="@+id/btnSignIn"
            android:text="@string/SignInConfirmTxt"
            android:textColor="@android:color/white"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#32a65b" android:layout_marginBottom="25dp"
            android:layout_centerHorizontal="true"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">
    </LinearLayout>
</RelativeLayout>