<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">

    <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintVertical_bias="0.635"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/linearLayout">
        <android.support.design.button.MaterialButton
                android:id="@+id/btnMainSignUp"
                android:text="@string/MainSignUpTxt"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        />
        <android.support.design.button.MaterialButton
                android:id="@+id/btnMainSignIn"
                android:text="@string/MainSignInTxt"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>
    </LinearLayout>
    <TextView
            android:text="@string/AppSlogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#32a65b"
            android:id="@+id/textView2"
            android:textSize="24sp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="125dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
    <ImageView
            android:src="@drawable/chose"
            android:layout_width="216dp"
            android:layout_height="175dp"
            android:id="@+id/imageView"
            android:contentDescription="Title"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp" app:layout_constraintBottom_toTopOf="@+id/textView2"/>

</android.support.constraint.ConstraintLayout>